--- a/boards/shields/nebular/nebular-layouts.dtsi
+++ b/boards/shields/nebular/nebular-layouts.dtsi
@@ -1,23 +1,76 @@
+// zmk-config/boards/shields/nebular/nebular-layouts.dtsi
 // See https://zmk.dev/docs/development/hardware-integration/physical-layouts
-// for how to configure this.
 
 #include <physical_layouts.dtsi>
 
 / {
     default_layout: default_layout {
         compatible = "zmk,physical-layout";
-        display-name = "Default Layout";
+        display-name = "Nebular 3x5+2"; // Descriptive name
         transform = <&default_transform>;
         kscan = <&kscan>;
 
-        // Edit this to define the positions and sizes of the keys, or remove it
-        // if your keyboard will not support ZMK Studio.
-        // https://zmk.dev/docs/development/hardware-integration/physical-layouts#optional-keys-property
-        keys  //                     w   h    x    y     rot    rx    ry
-            = <&key_physical_attrs 100 100    0    0       0     0     0>
-            , <&key_physical_attrs 100 100  100    0       0     0     0>
-            , <&key_physical_attrs 100 100    0  100       0     0     0>
-            , <&key_physical_attrs 100 100  100  100       0     0     0>
+        // Physical layout definition for ZMK Studio etc.
+        // Assumes 1u keys (100x100), 5 unit spacing (keys are 105 units apart center-to-center)
+        // Row stagger: Row 1 +25 units right/left, Row 2 +50 units right/left
+        // Split gap: ~160 units
+        // Thumb keys positioned below inner columns of Row 2
+        // NOTE: Adjust x/y values if your actual physical layout differs significantly.
+
+        keys //                     w    h     x     y     rot   rx   ry
+            = /* Left Hand */
+              /* Row 0 (Top) */
+              <&key_physical_attrs 100 100     0     0      0    0    0>  /* RC(0,0) */
+            , <&key_physical_attrs 100 100   105     0      0    0    0>  /* RC(0,1) */
+            , <&key_physical_attrs 100 100   210     0      0    0    0>  /* RC(0,2) */
+            , <&key_physical_attrs 100 100   315     0      0    0    0>  /* RC(0,3) */
+            , <&key_physical_attrs 100 100   420     0      0    0    0>  /* RC(0,4) */
+              /* Right Hand */
+              /* Row 0 (Top) */
+            , <&key_physical_attrs 100 100   730     0      0    0    0>  /* RC(0,5) - Start of Right (420+100+160+50 = 730) */
+            , <&key_physical_attrs 100 100   835     0      0    0    0>  /* RC(0,6) */
+            , <&key_physical_attrs 100 100   940     0      0    0    0>  /* RC(0,7) */
+            , <&key_physical_attrs 100 100  1045     0      0    0    0>  /* RC(0,8) */
+            , <&key_physical_attrs 100 100  1150     0      0    0    0>  /* RC(0,9) */
+
+              /* Left Hand */
+              /* Row 1 (Middle) - Stagger +25 */
+            , <&key_physical_attrs 100 100    25   105      0    0    0>  /* RC(1,0) */
+            , <&key_physical_attrs 100 100   130   105      0    0    0>  /* RC(1,1) */
+            , <&key_physical_attrs 100 100   235   105      0    0    0>  /* RC(1,2) */
+            , <&key_physical_attrs 100 100   340   105      0    0    0>  /* RC(1,3) */
+            , <&key_physical_attrs 100 100   445   105      0    0    0>  /* RC(1,4) */
+              /* Right Hand */
+              /* Row 1 (Middle) - Stagger -25 */
+            , <&key_physical_attrs 100 100   705   105      0    0    0>  /* RC(1,5) */
+            , <&key_physical_attrs 100 100   810   105      0    0    0>  /* RC(1,6) */
+            , <&key_physical_attrs 100 100   915   105      0    0    0>  /* RC(1,7) */
+            , <&key_physical_attrs 100 100  1020   105      0    0    0>  /* RC(1,8) */
+            , <&key_physical_attrs 100 100  1125   105      0    0    0>  /* RC(1,9) */
+
+              /* Left Hand */
+              /* Row 2 (Bottom) - Stagger +50 */
+            , <&key_physical_attrs 100 100    50   210      0    0    0>  /* RC(2,0) */
+            , <&key_physical_attrs 100 100   155   210      0    0    0>  /* RC(2,1) */
+            , <&key_physical_attrs 100 100   260   210      0    0    0>  /* RC(2,2) */
+            , <&key_physical_attrs 100 100   365   210      0    0    0>  /* RC(2,3) */
+            , <&key_physical_attrs 100 100   470   210      0    0    0>  /* RC(2,4) */
+              /* Right Hand */
+              /* Row 2 (Bottom) - Stagger -50 */
+            , <&key_physical_attrs 100 100   680   210      0    0    0>  /* RC(2,5) */
+            , <&key_physical_attrs 100 100   785   210      0    0    0>  /* RC(2,6) */
+            , <&key_physical_attrs 100 100   890   210      0    0    0>  /* RC(2,7) */
+            , <&key_physical_attrs 100 100   995   210      0    0    0>  /* RC(2,8) */
+            , <&key_physical_attrs 100 100  1100   210      0    0    0>  /* RC(2,9) */
+
+              /* Left Hand */
+              /* Row 3 (Thumb) - Positioned below Row 2, cols 1 & 2 */
+            , <&key_physical_attrs 100 100   155   315      0    0    0>  /* RC(3,0) - Under RC(2,1) */
+            , <&key_physical_attrs 100 100   260   315      0    0    0>  /* RC(3,1) - Under RC(2,2) */
+              /* Right Hand */
+              /* Row 3 (Thumb) - Positioned below Row 2, cols 7 & 8 */
+            , <&key_physical_attrs 100 100   890   315      0    0    0>  /* RC(3,2) - Under RC(2,7) */
+            , <&key_physical_attrs 100 100   995   315      0    0    0>  /* RC(3,3) - Under RC(2,8) */
             ;
     };
 };
