--- a/boards/shields/nebular/nebular.conf
+++ b/boards/shields/nebular/nebular.conf
@@ -11,3 +11,24 @@
 
 # Uncomment to enable the display
 # CONFIG_ZMK_DISPLAY=y
+
+# Enable deep sleep
+CONFIG_ZMK_SLEEP=y
+
+# Milliseconds of inactivity before entering deep sleep (30 minutes)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+
+# Enable battery level reporting
+CONFIG_ZMK_BATTERY_REPORTING=y
+
+# Report battery level as percentage (instead of millivolts)
+CONFIG_ZMK_BATTERY_REPORTING_PERCENT=y
+
+# Enable battery level notification
+CONFIG_ZMK_BATTERY_REPORTING_NOTIFY=y
+
+# Enable USB HID gamepad implementation, idle after 30s
+CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+
+# Increase BLE transmit power (improves connection stability at some battery cost)
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
