--- a/boards/shields/nebular/nebular.conf
+++ b/boards/shields/nebular/nebular.conf
@@ -30,5 +30,9 @@ CONFIG_ZMK_BATTERY_REPORTING_NOTIFY=y
 # Enable USB HID gamepad implementation, idle after 30s
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 
+# Bluetooth configuration
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
+
 # Increase BLE transmit power (improves connection stability at some battery cost)
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
