--- a/boards/shields/nebular/nebular.conf
+++ b/boards/shields/nebular/nebular.conf
@@ -36,3 +36,5 @@ CONFIG_ZMK_BLE=y
 
 # Increase BLE transmit power (improves connection stability at some battery cost)
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+CONFIG_ZMK_SOFT_OFF_HOLD_TIME=5000
