--- a/boards/shields/nebular/nebular.conf
+++ b/boards/shields/nebular/nebular.conf
@@ -38,3 +38,6 @@ CONFIG_ZMK_BLE=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 CONFIG_ZMK_SOFT_OFF_HOLD_TIME=5000
+
+# Enable mouse key simulation
+CONFIG_ZMK_MOUSE=y
