--- a/boards/shields/nebular/nebular.zmk.yml
+++ b/boards/shields/nebular/nebular.zmk.yml
@@ -14,6 +14,7 @@ url: https://example.com
 # See https://zmk.dev/docs/development/hardware-integration/hardware-metadata-files#features
 features:
   - keys
-  - studio  # Remove this line if your keyboard will not support ZMK Studio
+  - studio # Remove this line if your keyboard will not support ZMK Studio
+  - encoder
 requires:
   - pro_micro
