--- a/boards/shields/nebular/nebular.dtsi
+++ b/boards/shields/nebular/nebular.dtsi
@@ -49,4 +49,18 @@
                                                 RC(4, 5)
         >;
     };
+
+    sensors {
+        compatible = "zmk,keymap-sensors";
+        sensors = <&encoder_1>; // Add the encoder to the list of sensors for keymap bindings
+    };
+
+    encoder_1: encoder_1 {
+        compatible = "alps,ec11";
+        label = "ENCODER_1";
+        a-gpios = <&pro_micro 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>; // Phase A -> D3
+        b-gpios = <&pro_micro 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>; // Phase B -> D2
+        steps = <2>; // 1 action per detent
+        // status = "disabled"; // Implicitly disabled if status is omitted
+    };
 };
