add pointing support

--- a/boards/shields/nebular/nebular.conf
+++ b/boards/shields/nebular/nebular.conf
@@ -42,3 +42,6 @@ CONFIG_ZMK_SOFT_OFF_HOLD_TIME=5000
 
 # Enable mouse key simulation
 CONFIG_ZMK_MOUSE=y
+
+# Enable pointing device simulation
+CONFIG_ZMK_POINTING=y
