--- a/boards/shields/nebular/nebular.conf
+++ b/boards/shields/nebular/nebular.conf
@@ -42,3 +42,4 @@ CONFIG_ZMK_SOFT_OFF_HOLD_TIME=5000
 
 # Enable pointing device simulation
 CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
