--- a/config/nebular.conf
+++ b/config/nebular.conf
@@ -23,10 +23,10 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=30000
 CONFIG_ZMK_BATTERY_REPORTING=y
 
 # Report battery level as percentage (instead of millivolts)
-CONFIG_ZMK_BATTERY_REPORTING_PERCENT=y
+#CONFIG_ZMK_BATTERY_REPORTING_PERCENT=y
 
 # Enable battery level notification
-CONFIG_ZMK_BATTERY_REPORTING_NOTIFY=y
+#CONFIG_ZMK_BATTERY_REPORTING_NOTIFY=y
 
 # Enable USB HID gamepad implementation, idle after 30s
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
@@ -37,8 +37,6 @@ CONFIG_ZMK_BLE=y
 
 # Increase BLE transmit power (improves connection stability at some battery cost)
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-
-CONFIG_ZMK_SOFT_OFF_HOLD_TIME=5000
 
 # Enable pointing device simulation
 CONFIG_ZMK_POINTING=y
