--- a/config/nebular.conf
+++ b/config/nebular.conf
@@ -40,5 +40,5 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Enable pointing device simulation
 CONFIG_ZMK_POINTING=y
-CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
+#CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 CONFIG_SPI=y
