--- a/config/nebular.conf
+++ b/config/nebular.conf
@@ -42,5 +42,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_POINTING=y
 #CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 CONFIG_SPI=y
-CONFIG_ZMK_MOUSE_WHEEL_ACCEL_INTERVAL_MS=100 # Example: Accelerate faster
+CONFIG_ZMK_MOUSE_WHEEL_ACCEL_INTERVAL_MS=50 # Example: Accelerate faster
 CONFIG_ZMK_MOUSE_WHEEL_MAX_SPEED=12 # Example: Allow faster top speed
+CONFIG_ZMK_MOUSE_WHEEL_ACCEL_ENABLE=y
