--- a/config/nebular.conf
+++ b/config/nebular.conf
@@ -42,4 +42,6 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_POINTING=y
 #CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 CONFIG_SPI=y
-CONFIG_PMW3610=y
+
+# Enable PixArt PMW3610 sensor driver
+CONFIG_SENSOR_PMW3610=y
