--- a/config/nebular.conf
+++ b/config/nebular.conf
@@ -42,6 +42,10 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_POINTING=y
 #CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 CONFIG_SPI=y
+CONFIG_INPUT=y # Ensure core input system is enabled
 
-# Enable PixArt PMW3610 sensor driver
-CONFIG_SENSOR_PMW3610=y
+# Enable badjeff PMW3610 driver
+CONFIG_PMW3610=y
+
+# Add extra delay (1000ms) before PMW3610 init for stability (nice!nano v2 issue)
+CONFIG_PMW3610_INIT_POWER_UP_EXTRA_DELAY_MS=1000
