--- a/config/nebular.conf
+++ b/config/nebular.conf
@@ -49,3 +49,14 @@ CONFIG_PMW3610=y
 
 # Add extra delay (1000ms) before PMW3610 init for stability (nice!nano v2 issue)
 CONFIG_PMW3610_INIT_POWER_UP_EXTRA_DELAY_MS=1000
+
+# --- Debug Logging ---
+CONFIG_LOG=y
+CONFIG_LOG_BACKEND_UART=y
+CONFIG_LOG_PROCESS_THREAD=y
+
+# Enable specific module logging
+CONFIG_GPIO_LOG_LEVEL_DBG=y
+CONFIG_SPI_LOG_LEVEL_DBG=y
+CONFIG_PMW3610_LOG_LEVEL_DBG=y
+CONFIG_INPUT_LOG_LEVEL_DBG=y
