--- a/config/nebular.conf
+++ b/config/nebular.conf
@@ -44,11 +44,17 @@ CONFIG_ZMK_POINTING=y
 CONFIG_SPI=y
 CONFIG_INPUT=y # Ensure core input system is enabled
 
-# Enable badjeff PMW3610 driver
+# Enable PMW3610 driver
 CONFIG_PMW3610=y
 
-# Add extra delay (2000ms) before PMW3610 init for stability (nice!nano v2 issue)
-CONFIG_PMW3610_INIT_POWER_UP_EXTRA_DELAY_MS=2000
+# Add extra delay before PMW3610 init for stability (nice!nano v2 issue)
+#CONFIG_PMW3610_INIT_POWER_UP_EXTRA_DELAY_MS=2000
+
+# Try including these options if sensor isn't responding
+#CONFIG_PMW3610_SWAP_XY=n
+#CONFIG_PMW3610_INVERT_X=n
+#CONFIG_PMW3610_INVERT_Y=n
+#CONFIG_PMW3610_REPORT_INTERVAL_MIN=8
 
 # --- Debug Logging ---
 CONFIG_LOG=y
