--- a/config/nebular.conf
+++ b/config/nebular.conf
@@ -38,17 +38,6 @@ CONFIG_ZMK_BLE=y
 # Increase BLE transmit power (improves connection stability at some battery cost)
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
-# Split keyboard specific configs
-CONFIG_ZMK_SPLIT=y
-CONFIG_ZMK_SPLIT_BLE=y
-# Ensure split peripheral is advertising properly
-CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=1024
-CONFIG_ZMK_SPLIT_PERIPHERAL_STACK_SIZE=2048
-
-# Enable BLE logging to help debug connectivity
-CONFIG_BT_LOG_LEVEL_DBG=y
-CONFIG_ZMK_BLE_LOG_LEVEL_DBG=y
-
 # Enable pointing device simulation
 CONFIG_ZMK_POINTING=y
 #CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
@@ -59,13 +48,13 @@ CONFIG_INPUT=y # Ensure core input system is enabled
 CONFIG_PMW3610=y
 
 # Add extra delay before PMW3610 init for stability (nice!nano v2 issue)
-CONFIG_PMW3610_INIT_POWER_UP_EXTRA_DELAY_MS=2000
+#CONFIG_PMW3610_INIT_POWER_UP_EXTRA_DELAY_MS=2000
 
 # Try including these options if sensor isn't responding
 #CONFIG_PMW3610_SWAP_XY=n
 #CONFIG_PMW3610_INVERT_X=n
 #CONFIG_PMW3610_INVERT_Y=n
-CONFIG_PMW3610_REPORT_INTERVAL_MIN=16
+#CONFIG_PMW3610_REPORT_INTERVAL_MIN=8
 
 # --- Debug Logging ---
 CONFIG_LOG=y
