--- a/config/nebular.conf
+++ b/config/nebular.conf
@@ -58,6 +58,9 @@ CONFIG_LOG=y
 CONFIG_LOG_BACKEND_UART=y
 CONFIG_LOG_PROCESS_THREAD=y
 
+# Enable USB logging
+CONFIG_ZMK_USB_LOGGING=y
+
 # Enable specific module logging
 CONFIG_GPIO_LOG_LEVEL_DBG=y
 CONFIG_SPI_LOG_LEVEL_DBG=y
