--- a/config/nebular.conf
+++ b/config/nebular.conf
@@ -58,8 +58,11 @@ CONFIG_LOG=y
 CONFIG_LOG_BACKEND_UART=y
 CONFIG_LOG_PROCESS_THREAD=y
 
-# Enable USB logging
+# Enable USB logging (properly configured)
 CONFIG_ZMK_USB_LOGGING=y
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_SERIAL=y
+CONFIG_CONSOLE=y
 
 # Enable specific module logging
 CONFIG_GPIO_LOG_LEVEL_DBG=y
