--- a/config/nebular.conf
+++ b/config/nebular.conf
@@ -31,6 +31,9 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 # Enable USB HID gamepad implementation, idle after 30s
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 
+CONFIG_BT_CENTRAL_RECOVER_COUNT 5
+CONFIG_BT_CENTRAL_RECOVER_TIMEOUT_MS 1000
+
 # Bluetooth configuration
 CONFIG_BT=y
 CONFIG_ZMK_BLE=y
