--- a/config/nebular.conf
+++ b/config/nebular.conf
@@ -45,9 +45,12 @@ CONFIG_ZMK_POINTING=y
 #CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 CONFIG_SPI=y
 CONFIG_INPUT=y # Ensure core input system is enabled
+CONFIG_SENSOR=y # Enable the sensor subsystem
 
 # Enable PMW3610 driver
 CONFIG_PMW3610=y
+CONFIG_PMW3610_ORIENTATION_270=y # Match reference config
+CONFIG_PMW3610_INVERT_X=y       # Match reference config
 
 # Add extra delay before PMW3610 init for stability (nice!nano v2 issue)
 CONFIG_PMW3610_INIT_POWER_UP_EXTRA_DELAY_MS=1000
